modules/05-chaos/02-pending-pvc.yaml
apiVersion: v1
kind: Pod
metadata: { name: kata-02, namespace: lab-tools, labels: { team: lab } }
spec:
  containers:
    - { name: app, image: busybox:1.36, command: ["sleep","infinity"], volumeMounts: [{ name: d, mountPath: /data }] }
  volumes: [{ name: d, persistentVolumeClaim: { claimName: kata-02-data } }]
